--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+:root {
+  --color-dark-blue: #7a97ff;
+  --color-light-blue: rgba(122, 151, 255, 0.08);
+  --color-aqua-green: #9bd4b9;
+  --color-dark-text-grey: #333333;
+  --color-light-text-grey: #787878;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+button,
+input {
+  border: none;
+  font-family: inherit;
+  outline: none;
+}
+
+img {
+  display: block;
+}
+
+html {
+  font-family: 'Poppins', sans-serif;
+  font-size: 62.5%;
+}
+
+body {
+  background-color: #f6f8ff;
+  font-size: 1.6rem;
+}
+
+#root {
+  width: 80%;
+  max-width: 80rem;
+  margin: 6rem auto;
 }
