--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,6 @@
-.category {
+.card {
   background-color: var(--color-white);
   padding: 2rem;
   border-radius: 2rem;
-  width: 50%;
+  flex: 1 0 20rem;
 }
