--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,10 @@
 .main {
-  flex: 3 0 60rem;
+  flex: 3 0 70%;
   padding: 6rem;
 }
 
 .sidebar {
-  flex-grow: 1;
+  flex: 1 0 30rem;
   background-color: var(--color-white);
   padding: 6rem;
 }
