--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,8 +1,27 @@
 .card {
-  background-color: var(--color-white);
-  padding: 2rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
   overflow: hidden;
+}
+
+.card--half {
   flex: 1 0 46%;
   min-width: 30rem;
+}
+
+.card--blue {
+  background-color: var(--color-main-blue);
+  color: var(--color-white);
+  text-align: center;
+}
+
+.card--white {
+  background-color: var(--color-white);
+}
+
+.card--padding-small {
+  padding: 1rem;
+}
+
+.card--padding-medium {
+  padding: 2rem;
 }
