--- a/src/index.css
+++ b/src/index.css
@@ -38,13 +38,12 @@ body {
 button,
 input {
   border: none;
-  font-family: inherit;
+  font: inherit;
   outline: none;
 }
 
 h3,
-h4,
-h5 {
+h4 {
   font-weight: 600;
 }
 
@@ -59,5 +58,6 @@ h4 {
 }
 
 h5 {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
