Update siderbar form and functionality

--- a/src/components/UI/Input.module.css
+++ b/src/components/UI/Input.module.css
@@ -13,21 +13,5 @@
 .input-group__input {
   background-color: transparent;
   width: 100%;
-  color: var(--color-dark-text-grey);
-}
-
-::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: var(--color-dark-text-grey);
-  opacity: 1; /* Firefox */
-}
-
-:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: var(--color-dark-text-grey);
-}
-
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: var(--color-dark-text-grey);
+  color: var(--color-light-text-grey);
 }
