Add form validation

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --color-light-blue-2: #f3f5ff;
   --color-dark-text-grey: #333;
   --color-light-text-grey: #787878;
+  --color-red-error: #ed6e6e;
   --color-white: #fff;
 }
 
