--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,23 @@
 .main {
-  flex: 3 0 70%;
-  padding: 6rem;
+  flex: 1 0 70%;
+  padding: var(--padding-l);
 }
 
 .sidebar {
-  flex: 1 0 38rem;
+  flex: 1 0 30%;
+  min-width: 38rem;
   background-color: var(--color-white);
-  padding: 6rem;
+  padding: var(--padding-l);
+}
+
+@media only screen and (max-width: 44em) {
+  .main {
+    padding: var(--padding-m);
+  }
+
+  .sidebar {
+    flex-basis: 100%;
+    min-width: auto;
+    padding: var(--padding-m);
+  }
 }
