--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,7 @@
 .card {
   border-radius: 1rem;
   overflow: hidden;
+  padding: var(--padding-s);
 }
 
 .card--half {
@@ -16,6 +17,7 @@
   background-color: var(--color-main-blue);
   color: var(--color-white);
   text-align: center;
+  padding: var(--padding-xs);
 }
 
 .card--light-blue {
@@ -26,10 +28,13 @@
   background-color: var(--color-white);
 }
 
-.card--padding-small {
-  padding: 1.4rem;
-}
+@media only screen and (max-width: 44em) {
+  .card {
+    padding: var(--padding-xs);
+  }
 
-.card--padding-medium {
-  padding: 2rem;
+  .card--half {
+    flex-basis: 100%;
+    min-width: auto;
+  }
 }
